--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -172,6 +172,7 @@ jobs:
       #############################################################################################################
 
   mpi:
+    if: ${{ false }}
     name: ${{ matrix.os }}-${{ matrix.toolchain.compiler }}(${{ matrix.toolchain.version }})-${{ matrix.mpi }}-${{ matrix.build_shared_libs.tag }}-(YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }})(FORTRAN_TESTING=${{ matrix.phreeqcrm_fortran_testing }})(BUILD_MPI=${{ matrix.phreeqcrm_build_mpi }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -356,6 +357,7 @@ jobs:
         run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
 
   msvc:
+    if: ${{ false }}
     name: ${{ matrix.system.tag }}-${{ matrix.build_shared_libs.tag }}-(YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }})(FORTRAN_TESTING=${{ matrix.phreeqcrm_fortran_testing }})
     runs-on: ${{ matrix.system.os }}
     strategy:
@@ -410,6 +412,108 @@ jobs:
         run: >
           cmake
           -G "${{ matrix.system.generator }}"
+          -B ${{ github.workspace }}/build
+          -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs.value }}
+          -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
+          -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }}
+          -S ${{ github.workspace }}
+          -L
+
+      - name: cmake build
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }}
+
+      - name: ctest
+        run: ctest -C ${{ matrix.build_type }} --output-on-failure --test-dir ${{ github.workspace }}/build
+        id: ctest
+
+      - name: Display LastTest.log
+        run: cat ${{ github.workspace }}/build/Testing/Temporary/LastTest.log
+        if: success() || steps.ctest.conclusion == 'failure'
+
+      - name: Display phreeqcrm.pc
+        run: cat ${{ github.workspace }}/build/phreeqcrm.pc
+
+  msvc-intel:
+    name: ${{ matrix.system.tag }}-${{ matrix.toolchain.compiler }}-${{ matrix.build_shared_libs.tag }}-(YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }})(FORTRAN_TESTING=${{ matrix.phreeqcrm_fortran_testing }})
+    runs-on: ${{ matrix.system.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        system:
+          - {os: windows-2019, generator: 'Visual Studio 16 2019', tag: vs2019}
+          - {os: windows-2022, generator: 'Visual Studio 17 2022', tag: vs2022}
+        toolchain:
+          - {compiler: intel, version: '2023.2', toolset: 'Intel C++ Compiler 2023'}
+          - {compiler: intel-classic, version: '2021.10', toolset: 'Intel C++ Compiler 19.2'}
+        build_shared_libs:
+          - {value: ON, tag: shared}
+          # - {value: OFF, tag: static}
+        build_type: [Release]
+        phreeqcrm_fortran_testing: [OFF]
+        phreeqcrm_with_yaml_cpp: [OFF]
+    steps:
+      - uses: actions/checkout@v3
+
+      # - name: Setup mpi
+      #   uses: mpi4py/setup-mpi@v1
+      #   with:
+      #     mpi: ${{ matrix.mpi }}
+      #   # if: ${{ matrix.mpi != 'msmpi' }}
+
+      # - name: Install impi also
+      #   uses: mpi4py/setup-mpi@v1
+      #   with:
+      #     mpi: impi
+      #   if: ${{ matrix.mpi == 'msmpi' }}
+
+      - uses: scharlton2/setup-fortran@develop-setvars
+        id: setup-fortran
+        with:
+          compiler: ${{ matrix.toolchain.compiler }}
+          version: ${{ matrix.toolchain.version }}
+
+      - run: dir $env:ONEAPI_ROOT/compiler
+        if: runner.os == 'Windows'
+
+      - name: download yaml-cpp archive
+        run: gh release download 0.8.0 --repo jbeder/yaml-cpp --archive tar.gz
+        env:
+          GH_TOKEN: ${{ github.token }}
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: extract yaml-cpp
+        run: tar xvzf yaml-cpp-0.8.0.tar.gz
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: cmake configure yaml-cpp
+        run: >
+          cmake
+          -G "${{ matrix.system.generator }}"
+          -T "${{ matrix.toolchain.toolset }}"
+          -B ${{ github.workspace }}/yaml-cpp-build
+          -DCMAKE_INSTALL_PREFIX=${{ github.workspace }}/yaml-cpp
+          -S ${{ github.workspace }}/yaml-cpp-0.8.0
+          -L
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: cmake build yaml-cpp
+        run: cmake --build ${{ github.workspace }}/yaml-cpp-build --config ${{ matrix.build_type }}
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: cmake install yaml-cpp
+        run: cmake --install ${{ github.workspace }}/yaml-cpp-build --config ${{ matrix.build_type }}
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: export yaml-cpp_DIR env variable
+        shell: bash
+        run: echo "yaml-cpp_DIR=${{ github.workspace }}/yaml-cpp/lib/cmake/yaml-cpp" >> $GITHUB_ENV
+        if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
+
+      - name: cmake configure phreeqcrm
+        run: >
+          cmake
+          -G "${{ matrix.system.generator }}"
+          -T "${{ matrix.toolchain.toolset }}"
           -B ${{ github.workspace }}/build
           -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs.value }}
           -DPHREEQCRM_FORTRAN_TESTING:BOOL=${{ matrix.phreeqcrm_fortran_testing }}
