--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
           echo DATE_RFC_3339=$(date --rfc-3339=date)                                                                >> $GITHUB_OUTPUT
 
   valgrind:
+    if: ${{ false }}
     name: valgrind
     runs-on: ubuntu-latest
     steps:
@@ -575,7 +576,7 @@ jobs:
 
       - run: tar xvzf phreeqcrm-${{ env.VER_STRING }}.tar.gz
 
-      - run: find .
+      - run: find "phreeqcrm-${{ env.VER_STRING }}/Doxygen/html"
 
       - name: Fix permissions
         run: |
@@ -586,4 +587,29 @@ jobs:
       - uses: actions/upload-pages-artifact@v2
         with:
           path: phreeqcrm-${{ env.VER_STRING }}/Doxygen/html
+
+  deploy_pages:
+    # todo update conditionals for [valgrind, autotools, cmake]
+    # todo update github.ref below
+    # todo add cmake need
+    if: github.ref == 'module-publish-doxygen' && github.event_name == 'push'
     
+    needs: [upload_pages]
+
+    runs-on: ubuntu-latest
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
