--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,8 @@ jobs:
     - name: make
       shell: bash
       working-directory: ${{github.workspace}}/_build
-      run: DISTCHECK_CONFIGURE_FLAGS="--enable-fortran-test --with-yaml-cpp" make -j2 distcheck
+      #run: DISTCHECK_CONFIGURE_FLAGS="--enable-fortran-test --with-yaml-cpp" make -j2 distcheck
+      run: make dist
 
     - uses: actions/upload-artifact@v3
       with:
@@ -592,7 +593,8 @@ jobs:
     # todo update conditionals for [valgrind, autotools, cmake]
     # todo update github.ref below
     # todo add cmake need
-    # if: github.ref == 'module-publish-doxygen' && github.event_name == 'push'
+    # todo update make step of distcheck
+    if: github.ref == 'refs/heads/module-publish-doxygen' && github.event_name == 'push'
     
     needs: [upload_pages]
 
@@ -610,11 +612,6 @@ jobs:
 
     # Specify runner + deployment step
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
