--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -594,6 +594,7 @@ jobs:
     # todo update github.ref below
     # todo add cmake need
     # todo update make step of distcheck
+    # todo
     if: github.ref == 'refs/heads/module-publish-doxygen' && github.event_name == 'push'
     
     needs: [upload_pages]
