up to Get_value_ptr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   set(STANDALONE_BUILD 1)
   set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
   add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP>)
+  # GoogleTest requires at least C++14
+  set(CMAKE_CXX_STANDARD 14)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
 else()
   set(STANDALONE_BUILD 0)
 endif()
@@ -537,6 +540,22 @@ if(STANDALONE_BUILD EQUAL 1 AND MSVC)
 endif()
 
 if(STANDALONE_BUILD EQUAL 1)
+
+  # include(FetchContent)
+  # FetchContent_Declare(
+  #   googletest
+  #   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+  # )
+
+  find_package(GTest)
+  ##include(GoogleTest)
+
+  # For Windows: Prevent overriding the parent project's compiler/linker settings
+  ##set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+
+  # FetchContent_MakeAvailable(googletest)
+
   # tests
   enable_testing()
 
