--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BUILD: cp310-manylinux_x86_64
-          CIBW_BUILD_VERBOSITY: 2
+          CIBW_BUILD: cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64
+          # CIBW_BUILD_VERBOSITY: 2
         # to supply options, put them in 'env', like:
         # env:
         #   CIBW_SOME_OPTION: value
