--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,8 +155,6 @@ jobs:
 
     - name: ctest -S cmemcheck.cmake
       run: ctest -S cmemcheck.cmake -VV --output-on-failure -j 2
-      env:
-        CMAKE_POLICY_VERSION_MINIMUM: '3.5'
 
 
   distcheck:
@@ -365,16 +363,8 @@ jobs:
 
     env:
       VER_STRING: ${{ needs.init.outputs.VER }}-${{ needs.init.outputs.REL }}
-      CMAKE_POLICY_VERSION_MINIMUM: '3.5'
 
     steps:
-
-    # Note: This allows ${{ env.VCPKG_INSTALLATION_ROOT }} to be used in the remaining steps
-    # Although its already set in the environment it can't be accessed using the env context
-    # until it is stored in the $GITHUB_ENV file
-    - name: init VCPKG_INSTALLATION_ROOT
-      shell: bash
-      run: echo "VCPKG_INSTALLATION_ROOT=$VCPKG_INSTALLATION_ROOT" >> $GITHUB_ENV
 
     - uses: actions/download-artifact@v4
       with:
@@ -413,18 +403,6 @@ jobs:
         brew install ninja swig
         ls -alR /usr/local/Cellar/
 
-    - name: Install yaml-cpp (Linux)
-      if: ${{ runner.os == 'Linux' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
-      run: vcpkg install yaml-cpp:x64-linux
-
-    - name: Install yaml-cpp (macOS)
-      if: ${{ runner.os == 'macOS' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
-      run: vcpkg install yaml-cpp:x64-osx
-
-    - name: Install yaml-cpp (Windows)
-      if: ${{ runner.os == 'Windows' && matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
-      run: vcpkg install yaml-cpp:x64-windows
-
     # - name: Set up Python ${{ matrix.python-version }}
     - name: Set up Python 3.8
       uses: actions/setup-python@v5
@@ -444,12 +422,7 @@ jobs:
       run: tar xvzf phreeqcrm-${{ env.VER_STRING }}.tar.gz
 
     - name: Configure with CMake
-      if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
-      run: cmake -L -G Ninja -B build -S phreeqcrm-${{ env.VER_STRING }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }} -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }} -DPHREEQCRM_FORTRAN_TESTING:BOOL=ON
-
-    - name: Configure with CMake (using vcpkg toolchain)
-      if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
-      run: cmake -L -G Ninja --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake -B build -S phreeqcrm-${{ env.VER_STRING }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }} -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }} -DPHREEQCRM_FORTRAN_TESTING:BOOL=ON -DPHREEQCRM_BUILD_PYTHON:BOOL=ON
+      run: cmake -L -G Ninja -B build -S phreeqcrm-${{ env.VER_STRING }} -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DBUILD_SHARED_LIBS:BOOL=${{ matrix.build_shared_libs }} -DPHREEQCRM_WITH_YAML_CPP=${{ matrix.phreeqcrm_with_yaml_cpp }} -DPHREEQCRM_FORTRAN_TESTING:BOOL=ON -DPHREEQCRM_BUILD_PYTHON:BOOL=ON
 
     - name: Print phreeqcrm.pc
       working-directory: ${{ github.workspace }}/build
@@ -484,15 +457,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - name: Test install (configure) (Non-Windows)
-      if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
+    - name: Test install (configure)
       working-directory: ${{ github.workspace }}/Tests
       run: cmake -L -G Ninja -B build -S . -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -D_PHREEQCRM_TEST_INSTALL:BOOL=ON -DPHREEQCRM_FORTRAN_TESTING:BOOL=ON
-
-    - name: Test install (configure) (using vcpkg toolchain)
-      if: ${{ matrix.phreeqcrm_with_yaml_cpp == 'ON' }}
-      working-directory: ${{ github.workspace }}/Tests
-      run: cmake -L -G Ninja --toolchain ${{ env.VCPKG_INSTALLATION_ROOT }}/scripts/buildsystems/vcpkg.cmake -B build -S . -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -D_PHREEQCRM_TEST_INSTALL:BOOL=ON -DPHREEQCRM_FORTRAN_TESTING:BOOL=ON
 
     - name: Test install (build)
       working-directory: ${{ github.workspace }}/Tests
@@ -507,7 +474,7 @@ jobs:
       if: runner.os == 'Windows'
       working-directory: ${{ github.workspace }}/Tests/build
       run: |
-        $env:PATH="${{ env.VCPKG_INSTALLATION_ROOT }}\packages\yaml-cpp_x64-windows\bin;C:\Program Files (x86)\PhreeqcRM\bin;$env:PATH"
+        $env:PATH="C:\Program Files (x86)\PhreeqcRM\bin;$env:PATH"
         ctest -C ${{ env.BUILD_TYPE }} --output-on-failure
 
   cmake-mpi:
